# solid-happiness

./: .gitignore  pyproject.toml
scripts/: make_downloads.py
targets/: .gitignore  1_get_observability.sh  2a_download_hlsp_lists.sh  2b_download_spoc_lists.sh  Dockerfile  _entrypoint.sh  pointer.py  query.sql  requirements.txt
targets/data/: test.json
