[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.0.1",
    "astroquery>=0.4.9.post1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "tesswcs>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
